--- a/src/content/index.html
+++ b/src/content/index.html
@@ -17,7 +17,6 @@
     <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
     <meta property="og:image" content="https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png" />
 
-    <link rel="manifest" href="manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa/icons/icon-192x192.png" />
 
@@ -27,73 +26,72 @@
 </head>
 
 <body>
-    <section>
+    <main>
         <header class="header">
-            <img class="header__photo"></img>
+            <img class="header__photo" src="" alt="Damian Sikora"></img>
             <h1>
-                Welcome! My name is Damian Sikora and I'm a mobile developer. I'm a husband and a father. I'm interested in video games and IoT stuff.
+                Welcome👋 My name is Damian Sikora and I'm a mobile developer. I'm a husband and a father. I'm interested in video games and IoT stuff.
             </h1>
-            <h3>
-                You might be interested in checking the list of <a href="#skills">my skills</a>. Don't forget to hava a glimpse at <a href=#projects ">my projects</a>. I am open for new opportunities so if you have one  - <a href=#contact">contact me</a>.
-            </h3>
+            <p>
+                You might be interested in checking the list of <a href="#skills" class="header__link">my skills</a>. Don't forget to hava a glimpse at <a href="#projects" class="header__link">my projects</a>. I am open for new opportunities so if you
+                have one - <a href=#contact ">contact me</a>.
+            </p>
 
-            <a href="mailto:dsikora85@gmail.com">dsikora85@gmail.com</a>
+            <a href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
 
         </header>
 
-        <section class="skills">
-            <h1 id="skills" class="skills_header">My Skills</h1>
-            <section class="skill">
-                <h2 class="skill__header">Working knowladge</h2>
-                <ul class="skill__list">
-                    <li class="skill__listItem">Unity3D</li>
-                    <li class="skill__listItem">Xamarin</li>
-                    <li class="skill__listItem">Visual Studio</li>
-                    <li class="skill__listItem">GIT</li>
-                    <li class="skill__listItem">AR/VR</li>
+        <section class="skills ">
+            <h2 id="skills " class="skills_header ">My Skills</h2>
+            <section class="skill ">
+                <h3 class="skill__header ">Working knowladge</h3>
+                <ul class="skill__list ">
+                    <li class="skill__listItem ">Unity3D</li>
+                    <li class="skill__listItem ">Xamarin</li>
+                    <li class="skill__listItem ">Visual Studio</li>
+                    <li class="skill__listItem ">GIT</li>
+                    <li class="skill__listItem ">AR/VR</li>
                 </ul>
 
-                <h2 class="skill__header">Know something about</h2>
-                <ul class="skill__list">
-                    <li class="skill__listItem">Java</li>
-                    <li class="skill__listItem">ObjC</li>
-                    <li class="skill__listItem">shaders</li>
-                    <li class="skill__listItem">frontend</li>
+                <h3 class="skill__header ">Know something about</h3>
+                <ul class="skill__list ">
+                    <li class="skill__listItem ">Java</li>
+                    <li class="skill__listItem ">ObjC</li>
+                    <li class="skill__listItem ">SQLite</li>
+                    <li class="skill__listItem ">Frontend</li>
                 </ul>
 
-                <h2 class="skill__header">Want to learn</h2>
-                <ul class="skill__list">
-                    <li class="skill__listItem">Flutter</li>
-                    <li class="skill__listItem">Kotlin</li>
-                    <li class="skill__listItem">Azure</li>
+                <h3 class="skill__header ">Want to learn</h3>
+                <ul class="skill__list ">
+                    <li class="skill__listItem ">Flutter</li>
+                    <li class="skill__listItem ">Kotlin</li>
+                    <li class="skill__listItem ">Azure</li>
                 </ul>
             </section>
         </section>
-        <section id="projects" class="projects">
-            <article class="projects__header">
+        <section id="projects " class="projects ">
+            <article class="projects__header ">
                 <h2>Recent projects</h2>
-                <p class="projects__headerDesc">
-                    I started my mobile developer path in 2010. Since then, I'ce built some projects. Here's the list of of things I've done so far.
+                <p class="projects__headerDesc ">
+                    I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
                 </p>
             </article>
-            <ul class="projects__list">
+            <ul class="projects__list ">
 
             </ul>
         </section>
 
-    </section>
+        <footer id="contact " class="footer ">
+            <h2 class="contact__header ">Contact me</h2>
+            <p class="contact__text ">
+                I'm open for new projects. If you have one for me - we should talk!
+            </p>
+    
+            <a class="contact__email " href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
+        </footer>
 
-    <footer id="contact" class="footer">
-        <h2 class="contact__header">Contact me</h2>
-        <p class="contact__text">
-            I'm open for new projects. If you have one for me - we should talk!
-        </p>
-
-        <a class="contact__email" href="mailto:dsikora85@gmail.com">dsikora85@gmail.com</a>
-    </footer>
-
-
-    <script src="js/main.js"></script>
+    </main>
+    <script src="js/main.js "></script>
 </body>
 
 </html>
