--- a/src/content/index.html
+++ b/src/content/index.html
@@ -28,13 +28,13 @@
 <body>
     <main>
         <header class="header">
-            <img class="header__photo" src="" alt="Damian Sikora"></img>
+            <img src="" class="header__photo" alt="Damian Sikora"></img>
             <h1>
                 Welcome👋 My name is Damian Sikora and I'm a mobile developer. I'm a husband and a father. I'm interested in video games and IoT stuff.
             </h1>
             <p>
                 You might be interested in checking the list of <a href="#skills" class="header__link">my skills</a>. Don't forget to hava a glimpse at <a href="#projects" class="header__link">my projects</a>. I am open for new opportunities so if you
-                have one - <a href=#contact ">contact me</a>.
+                have one - <a href=#contact ">contact me</a>😊.
             </p>
 
             <a href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
@@ -77,7 +77,65 @@
                 </p>
             </article>
             <ul class="projects__list ">
+                <li class="project ">
+                    <img src=" " alt=" " class="project__icon "/>
+                    <h2 class="project__title ">Test project</h2>
+                    <h3 class="project__desc ">Description of this awesome project</h3>
+                    <a href=" ">
+                        <img src=" " alt=" "/>
+                        <h3>Demo</h3>
+                    </a>
 
+                    <a href=" ">
+                        <img src=" " alt=" "/>
+                        <h3>Code</h3>
+                    </a>
+                </li>
+
+                <li class="project ">
+                    <img src=" " alt=" " class="project__icon "/>
+                    <h2 class="project__title ">Test project</h2>
+                    <h3 class="project__desc ">Description of this awesome project</h3>
+                    <a href=" ">
+                        <img src=" " alt=" "/>
+                        <h3>Demo</h3>
+                    </a>
+
+                    <a href=" ">
+                        <img src=" " alt=" "/>
+                        <h3>Code</h3>
+                    </a>
+                </li>
+
+                <li class="project ">
+                    <img src=" " alt=" " class="project__icon "/>
+                    <h2 class="project__title ">Test project</h2>
+                    <h3 class="project__desc ">Description of this awesome project</h3>
+                    <a href=" ">
+                        <img src=" " alt=" "/>
+                        <h3>Demo</h3>
+                    </a>
+
+                    <a href=" ">
+                        <img src=" " alt=" "/>
+                        <h3>Code</h3>
+                    </a>
+                </li>
+
+                <li class="project ">
+                    <img src=" " alt=" " class="project__icon "/>
+                    <h2 class="project__title ">Test project</h2>
+                    <h3 class="project__desc ">Description of this awesome project</h3>
+                    <a href=" ">
+                        <img src=" " alt=" "/>
+                        <h3>Demo</h3>
+                    </a>
+
+                    <a href=" ">
+                        <img src=" " alt=" "/>
+                        <h3>Code</h3>
+                    </a>
+                </li>
             </ul>
         </section>
 
@@ -86,6 +144,12 @@
             <p class="contact__text ">
                 I'm open for new projects. If you have one for me - we should talk!
             </p>
+
+            <ul class="contact__list ">
+                <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
+                <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
+                <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
+            </ul>
     
             <a class="contact__email " href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
         </footer>
