Icons and small fixes

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -27,116 +27,117 @@
 
 <body>
     <main>
-        <header class="header">
-            <img src="" class="header__photo" alt="Damian Sikora"></img>
-            <h1>
-                Welcome👋 My name is Damian Sikora and I'm a mobile developer. I'm a husband and a father. I'm interested in video games and IoT stuff.
-            </h1>
-            <p>
-                You might be interested in checking the list of <a href="#skills" class="header__link">my skills</a>. Don't forget to hava a glimpse at <a href="#projects" class="header__link">my projects</a>. I am open for new opportunities so if you
-                have one - <a href=#contact ">contact me</a>😊.
-            </p>
+        <section class="whiteSection">
+            <header class="header">
+                <img src="assets/img/photo.png" class="header__photo" alt="Damian Sikora"></img>
+                <h1 class="header__title">
+                    Welcome👋 My name is Damian Sikora and I'm a mobile developer. I'm a husband and a father. I'm interested in video games and IoT stuff.
+                </h1>
+                <p class="header__desc">
+                    You might be interested in checking the list of <a href="#skills" class="header__link">my skills</a>. Don't forget to hava a glimpse at <a href="#projects" class="header__link">my projects</a>. I am open for new opportunities so if
+                    you have one - <a href=#contact ">contact me</a>😊.
+                </p>
 
-            <a href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
+                <a href="mailto:dsikora85@gmail.com " class="header__email ">dsikora85@gmail.com</a>
+            </header>
 
-        </header>
+            <section class="skills ">
+                <h2 id="skills " class="skills_header ">My Skills</h2>
+                <section class="skill ">
+                    <h3 class="skill__header ">Working knowladge</h3>
+                    <ul class="skill__list ">
+                        <li class="skill__listItem ">Unity3D</li>
+                        <li class="skill__listItem ">Xamarin</li>
+                        <li class="skill__listItem ">Visual Studio</li>
+                        <li class="skill__listItem ">GIT</li>
+                        <li class="skill__listItem ">AR/VR</li>
+                    </ul>
 
-        <section class="skills ">
-            <h2 id="skills " class="skills_header ">My Skills</h2>
-            <section class="skill ">
-                <h3 class="skill__header ">Working knowladge</h3>
-                <ul class="skill__list ">
-                    <li class="skill__listItem ">Unity3D</li>
-                    <li class="skill__listItem ">Xamarin</li>
-                    <li class="skill__listItem ">Visual Studio</li>
-                    <li class="skill__listItem ">GIT</li>
-                    <li class="skill__listItem ">AR/VR</li>
-                </ul>
+                    <h3 class="skill__header ">Know something about</h3>
+                    <ul class="skill__list ">
+                        <li class="skill__listItem ">Java</li>
+                        <li class="skill__listItem ">ObjC</li>
+                        <li class="skill__listItem ">SQLite</li>
+                        <li class="skill__listItem ">Frontend</li>
+                    </ul>
 
-                <h3 class="skill__header ">Know something about</h3>
-                <ul class="skill__list ">
-                    <li class="skill__listItem ">Java</li>
-                    <li class="skill__listItem ">ObjC</li>
-                    <li class="skill__listItem ">SQLite</li>
-                    <li class="skill__listItem ">Frontend</li>
-                </ul>
+                    <h3 class="skill__header ">Want to learn</h3>
+                    <ul class="skill__list ">
+                        <li class="skill__listItem ">Flutter</li>
+                        <li class="skill__listItem ">Kotlin</li>
+                        <li class="skill__listItem ">Azure</li>
+                    </ul>
+                </section>
+            </section>
+            <section id="projects " class="projects ">
+                <article class="projects__header ">
+                    <h2>Recent projects</h2>
+                    <p class="projects__headerDesc ">
+                        I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
+                    </p>
+                </article>
+                <ul class="projects__list ">
+                    <li class="project ">
+                        <img src=" " alt=" " class="project__icon "/>
+                        <h2 class="project__title ">Test project</h2>
+                        <h3 class="project__desc ">Description of this awesome project</h3>
+                        <a href=" ">
+                            <img src=" " alt=" "/>
+                            <h3>Demo</h3>
+                        </a>
 
-                <h3 class="skill__header ">Want to learn</h3>
-                <ul class="skill__list ">
-                    <li class="skill__listItem ">Flutter</li>
-                    <li class="skill__listItem ">Kotlin</li>
-                    <li class="skill__listItem ">Azure</li>
+                        <a href=" ">
+                            <img src=" " alt=" "/>
+                            <h3>Code</h3>
+                        </a>
+                    </li>
+
+                    <li class="project ">
+                        <img src=" " alt=" " class="project__icon "/>
+                        <h2 class="project__title ">Test project</h2>
+                        <h3 class="project__desc ">Description of this awesome project</h3>
+                        <a href=" ">
+                            <img src=" " alt=" "/>
+                            <h3>Demo</h3>
+                        </a>
+
+                        <a href=" ">
+                            <img src=" " alt=" "/>
+                            <h3>Code</h3>
+                        </a>
+                    </li>
+
+                    <li class="project ">
+                        <img src=" " alt=" " class="project__icon "/>
+                        <h2 class="project__title ">Test project</h2>
+                        <h3 class="project__desc ">Description of this awesome project</h3>
+                        <a href=" ">
+                            <img src=" " alt=" "/>
+                            <h3>Demo</h3>
+                        </a>
+
+                        <a href=" ">
+                            <img src=" " alt=" "/>
+                            <h3>Code</h3>
+                        </a>
+                    </li>
+
+                    <li class="project ">
+                        <img src=" " alt=" " class="project__icon "/>
+                        <h2 class="project__title ">Test project</h2>
+                        <h3 class="project__desc ">Description of this awesome project</h3>
+                        <a href=" ">
+                            <img src=" " alt=" "/>
+                            <h3>Demo</h3>
+                        </a>
+
+                        <a href=" ">
+                            <img src=" " alt=" "/>
+                            <h3>Code</h3>
+                        </a>
+                    </li>
                 </ul>
             </section>
-        </section>
-        <section id="projects " class="projects ">
-            <article class="projects__header ">
-                <h2>Recent projects</h2>
-                <p class="projects__headerDesc ">
-                    I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
-                </p>
-            </article>
-            <ul class="projects__list ">
-                <li class="project ">
-                    <img src=" " alt=" " class="project__icon "/>
-                    <h2 class="project__title ">Test project</h2>
-                    <h3 class="project__desc ">Description of this awesome project</h3>
-                    <a href=" ">
-                        <img src=" " alt=" "/>
-                        <h3>Demo</h3>
-                    </a>
-
-                    <a href=" ">
-                        <img src=" " alt=" "/>
-                        <h3>Code</h3>
-                    </a>
-                </li>
-
-                <li class="project ">
-                    <img src=" " alt=" " class="project__icon "/>
-                    <h2 class="project__title ">Test project</h2>
-                    <h3 class="project__desc ">Description of this awesome project</h3>
-                    <a href=" ">
-                        <img src=" " alt=" "/>
-                        <h3>Demo</h3>
-                    </a>
-
-                    <a href=" ">
-                        <img src=" " alt=" "/>
-                        <h3>Code</h3>
-                    </a>
-                </li>
-
-                <li class="project ">
-                    <img src=" " alt=" " class="project__icon "/>
-                    <h2 class="project__title ">Test project</h2>
-                    <h3 class="project__desc ">Description of this awesome project</h3>
-                    <a href=" ">
-                        <img src=" " alt=" "/>
-                        <h3>Demo</h3>
-                    </a>
-
-                    <a href=" ">
-                        <img src=" " alt=" "/>
-                        <h3>Code</h3>
-                    </a>
-                </li>
-
-                <li class="project ">
-                    <img src=" " alt=" " class="project__icon "/>
-                    <h2 class="project__title ">Test project</h2>
-                    <h3 class="project__desc ">Description of this awesome project</h3>
-                    <a href=" ">
-                        <img src=" " alt=" "/>
-                        <h3>Demo</h3>
-                    </a>
-
-                    <a href=" ">
-                        <img src=" " alt=" "/>
-                        <h3>Code</h3>
-                    </a>
-                </li>
-            </ul>
         </section>
 
         <footer id="contact " class="footer ">
