--- a/src/content/index.html
+++ b/src/content/index.html
@@ -35,16 +35,16 @@
                 </h1>
                 <p class="header__desc">
                     You might be interested in checking the list of <a href="#skills" class="header__link">my skills</a>. Don't forget to hava a glimpse at <a href="#projects" class="header__link">my projects</a>. I am open for new opportunities so if
-                    you have one - <a href=#contact ">contact me</a>😊.
+                    you have one - <a href=#contact class="header__link">contact me</a>😊.
                 </p>
 
                 <a href="mailto:dsikora85@gmail.com " class="header__email ">dsikora85@gmail.com</a>
             </header>
 
             <section class="skills ">
-                <h2 id="skills " class="skills_header ">My Skills</h2>
+                <h2 id="skills" class="skills__header ">My Skills</h2>
                 <section class="skill ">
-                    <h3 class="skill__header ">Working knowladge</h3>
+                    <h3 class="skill__header ">Working knowledge</h3>
                     <ul class="skill__list ">
                         <li class="skill__listItem ">Unity3D</li>
                         <li class="skill__listItem ">Xamarin</li>
@@ -52,7 +52,9 @@
                         <li class="skill__listItem ">GIT</li>
                         <li class="skill__listItem ">AR/VR</li>
                     </ul>
+                </section>
 
+                <section class="skill ">
                     <h3 class="skill__header ">Know something about</h3>
                     <ul class="skill__list ">
                         <li class="skill__listItem ">Java</li>
@@ -60,7 +62,9 @@
                         <li class="skill__listItem ">SQLite</li>
                         <li class="skill__listItem ">Frontend</li>
                     </ul>
+                </section>
 
+                <section class="skill ">
                     <h3 class="skill__header ">Want to learn</h3>
                     <ul class="skill__list ">
                         <li class="skill__listItem ">Flutter</li>
@@ -69,75 +73,76 @@
                     </ul>
                 </section>
             </section>
-            <section id="projects " class="projects ">
-                <article class="projects__header ">
-                    <h2>Recent projects</h2>
-                    <p class="projects__headerDesc ">
-                        I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
-                    </p>
-                </article>
-                <ul class="projects__list ">
-                    <li class="project ">
-                        <img src=" " alt=" " class="project__icon "/>
-                        <h2 class="project__title ">Test project</h2>
-                        <h3 class="project__desc ">Description of this awesome project</h3>
-                        <a href=" ">
-                            <img src=" " alt=" "/>
-                            <h3>Demo</h3>
-                        </a>
+        </section>
+        <section id="projects " class="projects ">
+            <article class="projects__header ">
+                <h2>Recent projects</h2>
+                <p class="projects__headerDesc ">
+                    I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
+                </p>
+            </article>
+            <ul class="projects__list ">
+                <li class="project ">
+                    <img src=" " alt=" " class="project__icon " />
+                    <h2 class="project__title ">Test project</h2>
+                    <h3 class="project__desc ">Description of this awesome project</h3>
+                    <a href=" ">
+                        <img src=" " alt=" " />
+                        <h3>Demo</h3>
+                    </a>
 
-                        <a href=" ">
-                            <img src=" " alt=" "/>
-                            <h3>Code</h3>
-                        </a>
-                    </li>
+                    <a href=" ">
+                        <img src=" " alt=" " />
+                        <h3>Code</h3>
+                    </a>
+                </li>
 
-                    <li class="project ">
-                        <img src=" " alt=" " class="project__icon "/>
-                        <h2 class="project__title ">Test project</h2>
-                        <h3 class="project__desc ">Description of this awesome project</h3>
-                        <a href=" ">
-                            <img src=" " alt=" "/>
-                            <h3>Demo</h3>
-                        </a>
+                <li class="project ">
+                    <img src=" " alt=" " class="project__icon " />
+                    <h2 class="project__title ">Test project</h2>
+                    <h3 class="project__desc ">Description of this awesome project</h3>
+                    <a href=" ">
+                        <img src=" " alt=" " />
+                        <h3>Demo</h3>
+                    </a>
 
-                        <a href=" ">
-                            <img src=" " alt=" "/>
-                            <h3>Code</h3>
-                        </a>
-                    </li>
+                    <a href=" ">
+                        <img src=" " alt=" " />
+                        <h3>Code</h3>
+                    </a>
+                </li>
 
-                    <li class="project ">
-                        <img src=" " alt=" " class="project__icon "/>
-                        <h2 class="project__title ">Test project</h2>
-                        <h3 class="project__desc ">Description of this awesome project</h3>
-                        <a href=" ">
-                            <img src=" " alt=" "/>
-                            <h3>Demo</h3>
-                        </a>
+                <li class="project ">
+                    <img src=" " alt=" " class="project__icon " />
+                    <h2 class="project__title ">Test project</h2>
+                    <h3 class="project__desc ">Description of this awesome project</h3>
+                    <a href=" ">
+                        <img src=" " alt=" " />
+                        <h3>Demo</h3>
+                    </a>
 
-                        <a href=" ">
-                            <img src=" " alt=" "/>
-                            <h3>Code</h3>
-                        </a>
-                    </li>
+                    <a href=" ">
+                        <img src=" " alt=" " />
+                        <h3>Code</h3>
+                    </a>
+                </li>
 
-                    <li class="project ">
-                        <img src=" " alt=" " class="project__icon "/>
-                        <h2 class="project__title ">Test project</h2>
-                        <h3 class="project__desc ">Description of this awesome project</h3>
-                        <a href=" ">
-                            <img src=" " alt=" "/>
-                            <h3>Demo</h3>
-                        </a>
+                <li class="project ">
+                    <img src=" " alt=" " class="project__icon " />
+                    <h2 class="project__title ">Test project</h2>
+                    <h3 class="project__desc ">Description of this awesome project</h3>
+                    <a href=" ">
+                        <img src=" " alt=" " />
+                        <h3>Demo</h3>
+                    </a>
 
-                        <a href=" ">
-                            <img src=" " alt=" "/>
-                            <h3>Code</h3>
-                        </a>
-                    </li>
-                </ul>
-            </section>
+                    <a href=" ">
+                        <img src=" " alt=" " />
+                        <h3>Code</h3>
+                    </a>
+                </li>
+            </ul>
+        </section>
         </section>
 
         <footer id="contact " class="footer ">
@@ -148,10 +153,10 @@
 
             <ul class="contact__list ">
                 <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
-                <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
-                <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
+                    <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
+                        <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
             </ul>
-    
+
             <a class="contact__email " href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
         </footer>
 
