--- a/src/content/index.html
+++ b/src/content/index.html
@@ -41,30 +41,31 @@
                 <a href="mailto:dsikora85@gmail.com " class="header__email ">dsikora85@gmail.com</a>
             </header>
 
-            <section class="skills ">
-                <h2 id="skills" class="skills__header ">My Skills</h2>
+            <section id="skills" class="skills">
+                <h2 class="skills__header ">My Skills</h2>
                 <section class="skill ">
                     <h3 class="skill__header ">Working knowledge</h3>
                     <ul class="skill__list ">
+                        <li class="skill__listItem ">C#</li>
                         <li class="skill__listItem ">Unity3D</li>
                         <li class="skill__listItem ">Xamarin</li>
                         <li class="skill__listItem ">Visual Studio</li>
                         <li class="skill__listItem ">GIT</li>
-                        <li class="skill__listItem ">AR/VR</li>
+                        <li class="skill__listItem ">Deploying to Google Play and AppStore</li>
                     </ul>
                 </section>
 
-                <section class="skill ">
+                <section class="skill skill-violet">
                     <h3 class="skill__header ">Know something about</h3>
                     <ul class="skill__list ">
                         <li class="skill__listItem ">Java</li>
                         <li class="skill__listItem ">ObjC</li>
                         <li class="skill__listItem ">SQLite</li>
-                        <li class="skill__listItem ">Frontend</li>
+                        <li class="skill__listItem ">Frontend (HTML+CSS+JS)</li>
                     </ul>
                 </section>
 
-                <section class="skill ">
+                <section class="skill skill-blue">
                     <h3 class="skill__header ">Want to learn</h3>
                     <ul class="skill__list ">
                         <li class="skill__listItem ">Flutter</li>
@@ -73,89 +74,102 @@
                     </ul>
                 </section>
             </section>
+
+            <section id="projects" class="projects ">
+                <article class="projects__head">
+                    <h2 class="projects__header ">Recent projects</h2>
+                    <p class="projects__headerDesc ">
+                        I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
+                    </p>
+                </article>
+                <ul class="projects__list ">
+                    <li class="project ">
+                        <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
+                        <h2 class="project__title ">Test project</h2>
+                        <h3 class="project__desc ">Description of this awesome project</h3>
+                        <section class="project__links">
+                            <a href=" " class="project__link">
+                                <img src=" " alt=" " />
+                                <h3>Demo</h3>
+                            </a>
+
+                            <a href=" " class="project__link">
+                                <img src=" " alt=" " />
+                                <h3>Code</h3>
+                            </a>
+                        </section>
+                    </li>
+
+                    <li class="project ">
+                        <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
+                        <h2 class="project__title ">Test project</h2>
+                        <h3 class="project__desc ">Description of this awesome project</h3>
+                        <section class="project__links">
+                            <a href=" " class="project__link">
+                                <img src=" " alt=" " />
+                                <h3>Demo</h3>
+                            </a>
+
+                            <a href=" " class="project__link">
+                                <img src=" " alt=" " />
+                                <h3>Code</h3>
+                            </a>
+                        </section>
+                    </li>
+
+                    <li class="project ">
+                        <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
+                        <h2 class="project__title ">Test project</h2>
+                        <h3 class="project__desc ">Description of this awesome project</h3>
+                        <section class="project__links">
+                            <a href=" " class="project__link">
+                                <img src=" " alt=" " />
+                                <h3>Demo</h3>
+                            </a>
+
+                            <a href=" " class="project__link">
+                                <img src=" " alt=" " />
+                                <h3>Code</h3>
+                            </a>
+                        </section>
+                    </li>
+
+                    <li class="project ">
+                        <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
+                        <h2 class="project__title ">Test project</h2>
+                        <h3 class="project__desc ">Description of this awesome project</h3>
+                        <section class="project__links">
+                            <a href=" " class="project__link">
+                                <img src=" " alt=" " />
+                                <h3>Demo</h3>
+                            </a>
+
+                            <a href=" " class="project__link">
+                                <img src=" " alt=" " />
+                                <h3>Code</h3>
+                            </a>
+                        </section>
+                    </li>
+                </ul>
+            </section>
         </section>
-        <section id="projects " class="projects ">
-            <article class="projects__header ">
-                <h2>Recent projects</h2>
-                <p class="projects__headerDesc ">
-                    I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
-                </p>
-            </article>
-            <ul class="projects__list ">
-                <li class="project ">
-                    <img src=" " alt=" " class="project__icon " />
-                    <h2 class="project__title ">Test project</h2>
-                    <h3 class="project__desc ">Description of this awesome project</h3>
-                    <a href=" ">
-                        <img src=" " alt=" " />
-                        <h3>Demo</h3>
-                    </a>
 
-                    <a href=" ">
-                        <img src=" " alt=" " />
-                        <h3>Code</h3>
-                    </a>
-                </li>
-
-                <li class="project ">
-                    <img src=" " alt=" " class="project__icon " />
-                    <h2 class="project__title ">Test project</h2>
-                    <h3 class="project__desc ">Description of this awesome project</h3>
-                    <a href=" ">
-                        <img src=" " alt=" " />
-                        <h3>Demo</h3>
-                    </a>
-
-                    <a href=" ">
-                        <img src=" " alt=" " />
-                        <h3>Code</h3>
-                    </a>
-                </li>
-
-                <li class="project ">
-                    <img src=" " alt=" " class="project__icon " />
-                    <h2 class="project__title ">Test project</h2>
-                    <h3 class="project__desc ">Description of this awesome project</h3>
-                    <a href=" ">
-                        <img src=" " alt=" " />
-                        <h3>Demo</h3>
-                    </a>
-
-                    <a href=" ">
-                        <img src=" " alt=" " />
-                        <h3>Code</h3>
-                    </a>
-                </li>
-
-                <li class="project ">
-                    <img src=" " alt=" " class="project__icon " />
-                    <h2 class="project__title ">Test project</h2>
-                    <h3 class="project__desc ">Description of this awesome project</h3>
-                    <a href=" ">
-                        <img src=" " alt=" " />
-                        <h3>Demo</h3>
-                    </a>
-
-                    <a href=" ">
-                        <img src=" " alt=" " />
-                        <h3>Code</h3>
-                    </a>
-                </li>
-            </ul>
-        </section>
-        </section>
-
-        <footer id="contact " class="footer ">
+        <footer id="contact" class="contact ">
             <h2 class="contact__header ">Contact me</h2>
             <p class="contact__text ">
                 I'm open for new projects. If you have one for me - we should talk!
             </p>
 
-            <ul class="contact__list ">
-                <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
-                    <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
-                        <a href=" " class="contact__listItem "><img src=" " alt=" "></img</a>
-            </ul>
+            <section class="contact__list ">
+                <a href="https://github.com/damiansikora85/" class="contact__listItem ">
+                    <img src="../assets/img/githubIconWhite.svg" alt=" "></img>
+                </a>
+                <a href=" " class="contact__listItem ">
+                    <img src="../assets/img/bitbucket-brands.svg" alt=" "></img>
+                </a>
+                <a href=" " class="contact__listItem "><img src=" " alt=" "></img>
+                </a>
+            </section>
 
             <a class="contact__email " href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
         </footer>
