Getting projects from GH

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -82,8 +82,8 @@
                         I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
                     </p>
                 </article>
-                <ul class="projects__list ">
-                    <li class="project ">
+                <ul class="projects__list projects__list-js">
+                    <!--<li class="project ">
                         <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
                         <h2 class="project__title ">Test project</h2>
                         <h3 class="project__desc ">Description of this awesome project</h3>
@@ -149,7 +149,7 @@
                                 <h3>Code</h3>
                             </a>
                         </section>
-                    </li>
+                    </li>-->
                 </ul>
             </section>
         </section>
