--- a/src/content/index.html
+++ b/src/content/index.html
@@ -61,6 +61,8 @@
                         <li class="skill__listItem ">Java</li>
                         <li class="skill__listItem ">ObjC</li>
                         <li class="skill__listItem ">SQLite</li>
+                        <li class="skill__listItem ">C++</li>
+                        <li class="skill__listItem ">Shaders</li>
                         <li class="skill__listItem ">Frontend (HTML+CSS+JS)</li>
                     </ul>
                 </section>
@@ -75,82 +77,18 @@
                 </section>
             </section>
 
+
             <section id="projects" class="projects ">
-                <article class="projects__head">
+                <div class="container">
                     <h2 class="projects__header ">Recent projects</h2>
                     <p class="projects__headerDesc ">
                         I started my mobile developer career in 2010. Since then, I've built some projects. Here's the list of of things I've done so far.
                     </p>
-                </article>
-                <ul class="projects__list projects__list-js">
-                    <!--<li class="project ">
-                        <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
-                        <h2 class="project__title ">Test project</h2>
-                        <h3 class="project__desc ">Description of this awesome project</h3>
-                        <section class="project__links">
-                            <a href=" " class="project__link">
-                                <img src=" " alt=" " />
-                                <h3>Demo</h3>
-                            </a>
 
-                            <a href=" " class="project__link">
-                                <img src=" " alt=" " />
-                                <h3>Code</h3>
-                            </a>
-                        </section>
-                    </li>
+                    <ul class="projects__list projects__list-js">
+                    </ul>
 
-                    <li class="project ">
-                        <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
-                        <h2 class="project__title ">Test project</h2>
-                        <h3 class="project__desc ">Description of this awesome project</h3>
-                        <section class="project__links">
-                            <a href=" " class="project__link">
-                                <img src=" " alt=" " />
-                                <h3>Demo</h3>
-                            </a>
-
-                            <a href=" " class="project__link">
-                                <img src=" " alt=" " />
-                                <h3>Code</h3>
-                            </a>
-                        </section>
-                    </li>
-
-                    <li class="project ">
-                        <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
-                        <h2 class="project__title ">Test project</h2>
-                        <h3 class="project__desc ">Description of this awesome project</h3>
-                        <section class="project__links">
-                            <a href=" " class="project__link">
-                                <img src=" " alt=" " />
-                                <h3>Demo</h3>
-                            </a>
-
-                            <a href=" " class="project__link">
-                                <img src=" " alt=" " />
-                                <h3>Code</h3>
-                            </a>
-                        </section>
-                    </li>
-
-                    <li class="project ">
-                        <img src="../assets/img/githubIcon.svg" alt="github" class="project__icon " />
-                        <h2 class="project__title ">Test project</h2>
-                        <h3 class="project__desc ">Description of this awesome project</h3>
-                        <section class="project__links">
-                            <a href=" " class="project__link">
-                                <img src=" " alt=" " />
-                                <h3>Demo</h3>
-                            </a>
-
-                            <a href=" " class="project__link">
-                                <img src=" " alt=" " />
-                                <h3>Code</h3>
-                            </a>
-                        </section>
-                    </li>-->
-                </ul>
+                </div>
             </section>
         </section>
 
@@ -162,18 +100,12 @@
 
             <section class="contact__list ">
                 <a href="https://github.com/damiansikora85/" class="contact__listItem ">
-                    <img src="../assets/img/githubIconWhite.svg" alt=" "></img>
-                </a>
-                <a href=" " class="contact__listItem ">
-                    <img src="../assets/img/bitbucket-brands.svg" alt=" "></img>
-                </a>
-                <a href=" " class="contact__listItem "><img src=" " alt=" "></img>
+                    <img src="../assets/img/githubIconWhite.svg" alt="github" />
                 </a>
             </section>
 
             <a class="contact__email " href="mailto:dsikora85@gmail.com ">dsikora85@gmail.com</a>
         </footer>
-
     </main>
     <script src="js/main.js "></script>
 </body>
